[gd_scene load_steps=15 format=2]

[ext_resource path="res://Tree.gd" type="Script" id=1]
[ext_resource path="res://assets/Untitled.png" type="Texture" id=2]
[ext_resource path="res://Button_newGame.gd" type="Script" id=3]
[ext_resource path="res://Node2D.gd" type="Script" id=4]
[ext_resource path="res://Area2D2_p.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/16048_original.jpg" type="Texture" id=7]
[ext_resource path="res://Sprite.gd" type="Script" id=8]
[ext_resource path="res://Popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameOver.gd" type="Script" id=10]
[ext_resource path="res://assets/Sounds/MESSAGE-B_Accept.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/Sounds/dustbin.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Sounds/jk.ogg" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.9278, 34.9935 )

[node name="Tree" type="Tree"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 984.0
margin_bottom = 560.0

[node name="1516066" type="Sprite" parent="Control"]
position = Vector2( 0, -1.05261 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 896.0
margin_top = 64.0
margin_right = 978.0
margin_bottom = 132.0

[node name="Button_newGame" type="Button" parent="Control/VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
hint_tooltip = "Starts the game	W,A,S,D to move"
text = "New Game"
flat = true
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Control/VBoxContainer/Button_newGame"]

[node name="Button_Help" type="Button" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
hint_tooltip = "Opens tutorial"
text = "Help"
flat = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control/VBoxContainer/Button_Help"]
visible = false
margin_left = -450.0
margin_top = -88.0
margin_right = -50.0
margin_bottom = 512.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Button_Help/Panel"]
margin_right = 400.0
margin_bottom = 600.0
text = "Use W,A,S,D to move 
Moving uses enery 
Collecting trash produces energy 
Running into the walls breaks you (you die!)
The more enrgy you have , the faster you will move ,be careful

"

[node name="Tween" type="Tween" parent="Control/VBoxContainer/Button_Help"]

[node name="Button_Settings" type="Button" parent="Control/VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
hint_tooltip = "Toggle things "
text = "Settings"
flat = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control/VBoxContainer/Button_Settings"]
editor/display_folded = true
visible = false
margin_left = -450.0
margin_top = -111.0
margin_right = -50.0
margin_bottom = 489.0

[node name="Sound" type="Label" parent="Control/VBoxContainer/Button_Settings/Panel"]
margin_right = 40.0
margin_bottom = 14.0
text = "Sound"

[node name="CheckBox" type="CheckBox" parent="Control/VBoxContainer/Button_Settings/Panel/Sound"]
margin_left = 128.0
margin_right = 152.0
margin_bottom = 24.0
pressed = true

[node name="Volume" type="Label" parent="Control/VBoxContainer/Button_Settings/Panel"]
margin_top = 64.0
margin_right = 49.0
margin_bottom = 78.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/Button_Settings/Panel/Volume"]
margin_left = 128.0
margin_top = 32.0
margin_right = 384.0
margin_bottom = 48.0
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Control/VBoxContainer/Button_Settings/Panel/Volume/HSlider"]
margin_left = -128.0
margin_right = -88.0
margin_bottom = 14.0
text = "Music"

[node name="HSlider2" type="HSlider" parent="Control/VBoxContainer/Button_Settings/Panel/Volume"]
margin_left = 128.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 80.0
value = 25.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Control/VBoxContainer/Button_Settings/Panel/Volume/HSlider2"]
margin_left = -128.0
margin_right = -88.0
margin_bottom = 14.0
text = "SFX	"

[node name="Apply" type="Button" parent="Control/VBoxContainer/Button_Settings/Panel"]
margin_left = 328.0
margin_top = 536.0
margin_right = 392.0
margin_bottom = 556.0
text = "APPLY"

[node name="Tween" type="Tween" parent="Control/VBoxContainer/Button_Settings"]

[node name="Button_About" type="Button" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
hint_tooltip = "A few comments "
text = "About "
flat = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control/VBoxContainer/Button_About"]
visible = false
margin_left = -450.0
margin_top = -136.0
margin_right = -50.0
margin_bottom = 464.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Button_About/Panel"]
margin_right = 400.0
margin_bottom = 600.0
text = "TrashMan was created in Gadot for the weekly game jam 
120 , theme of \"what a mess\". 

TrashMan is robot which converts trash to energy 

Hope you have as much fun playing the game as i had 
making it	 !!!!! 
"

[node name="Tween" type="Tween" parent="Control/VBoxContainer/Button_About"]

[node name="Button_Credits" type="Button" parent="Control/VBoxContainer"]
margin_top = 96.0
margin_right = 82.0
margin_bottom = 116.0
hint_tooltip = "Credit where its due "
text = "Credits"
flat = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control/VBoxContainer/Button_Credits"]
margin_left = -450.0
margin_top = -160.0
margin_right = -50.0
margin_bottom = 440.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer/Button_Credits/Panel"]
margin_right = 450.0
margin_bottom = 600.0
bbcode_enabled = true
bbcode_text = "Scripting - Romeosierra13
Design -   Romeosierra13
Title Art - Romeosierra13

Engine - Gadot Engine 3.11	[url]{https://godotengine.org/}[/url]
Other external programs used :
		GIMP - [url]{https://www.gimp.org/}[/url]
		LibreSprite - [url]{https://github.com/LibreSprite}[/url]
Music - 8 Bit Universe ([url]{https://www.youtube.com/channel/UCn4HDI02U4f3V
EsghRX7dRw}[/url])

Sound Effects - [url]{https://opengameart.org/content/library-of-game-sounds}[/url]
								Interferance and UI Pack 1
Art - Romeosierra13
Trash Sprites(Spare Change Project) - [url]{http://jnoodle.com/sparechange/news/page/2/}[/url]"
text = "Scripting - Romeosierra13
Design -   Romeosierra13
Title Art - Romeosierra13

Engine - Gadot Engine 3.11	{https://godotengine.org/}
Other external programs used :
		GIMP - {https://www.gimp.org/}
		LibreSprite - {https://github.com/LibreSprite}
Music - 8 Bit Universe ({https://www.youtube.com/channel/UCn4HDI02U4f3V
EsghRX7dRw})

Sound Effects - {https://opengameart.org/content/library-of-game-sounds}
								Interferance and UI Pack 1
Art - Romeosierra13
Trash Sprites(Spare Change Project) - {http://jnoodle.com/sparechange/news/page/2/}"

[node name="Tween" type="Tween" parent="Control/VBoxContainer/Button_Credits"]

[node name="Label" type="Label" parent="Control"]
margin_left = 512.0
margin_top = 550.0
margin_right = 530.0
margin_bottom = 564.0
text = "Weekly Game Jam 120 
\"What a Mess\""

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Area2D2_p" type="Area2D" parent="Node2D"]
light_mask = 2
position = Vector2( 64, 64 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D2_p"]
light_mask = 2
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Node2D/Area2D2_p/CollisionShape2D"]
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="Node2D/Area2D2_p"]
repeat = true
playback/repeat = true

[node name="Label" type="Label" parent="Node2D/Area2D2_p"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 10, 10 )

[node name="Score" type="Label" parent="Node2D"]
editor/display_folded = true
margin_right = 54.0
margin_bottom = 14.0
text = "SCORE :"

[node name="Label" type="Label" parent="Node2D/Score"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="Energy" type="Label" parent="Node2D"]
editor/display_folded = true
margin_left = 256.0
margin_right = 310.0
margin_bottom = 14.0
text = "ENERGY :"

[node name="Label" type="Label" parent="Node2D/Energy"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="Level" type="Label" parent="Node2D"]
editor/display_folded = true
margin_left = 450.0
margin_right = 492.0
margin_bottom = 14.0
text = "Level :"

[node name="Label" type="Label" parent="Node2D/Level"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="levelbar_Back" type="Sprite" parent="Node2D/Level"]
position = Vector2( 64, 0 )
scale = Vector2( 16, 0.5 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 32, 32 )

[node name="Sprite" type="Sprite" parent="Node2D/Level"]
editor/display_folded = true
position = Vector2( 64, 0 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 759, 112, 16, 16 )
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Node2D/Level/Sprite"]

[node name="Label" parent="Node2D" instance=ExtResource( 9 )]
margin_left = 512.0
margin_top = 300.0
margin_right = 552.0
margin_bottom = 314.0

[node name="GameOver" type="Control" parent="."]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="GameOver"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/CenterContainer"]
margin_left = 470.0
margin_top = 260.0
margin_right = 553.0
margin_bottom = 340.0

[node name="Label" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "GAMEOVER"

[node name="Score" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 32.0
text = "Score :"

[node name="Label" type="Label" parent="GameOver/CenterContainer/VBoxContainer/Score"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="PlayAgain" type="Button" parent="GameOver/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 83.0
margin_bottom = 56.0
text = "Play Again"

[node name="MainMenu" type="Button" parent="GameOver/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 83.0
margin_bottom = 80.0
text = "Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -25.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0
autoplay = true
[connection signal="mouse_entered" from="Control/VBoxContainer/Button_newGame" to="." method="_on_Button_newGame_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Button_newGame" to="." method="_on_Button_newGame_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button_newGame" to="." method="_on_Button_newGame_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button_Help" to="." method="_on_Button_Help_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Button_Help" to="." method="_on_Button_Help_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Help" to="." method="_on_Button_Help_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button_Settings" to="." method="_on_Button_Help_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Button_Settings" to="." method="_on_Button_Help_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Settings" to="." method="_on_Button_Settings_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/Button_Settings/Panel/Volume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/Button_Settings/Panel/Volume/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Settings/Panel/Apply" to="." method="_on_Apply_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button_About" to="." method="_on_Button_About_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Button_About" to="." method="_on_Button_About_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button_About" to="." method="_on_Button_About_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button_Credits" to="." method="_on_Button_Credits_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Button_Credits" to="." method="_on_Button_Credits_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Credits" to="." method="_on_Button_Credits_pressed"]
[connection signal="area_entered" from="Node2D/Area2D2_p" to="Node2D" method="_on_Area2D2_p_area_entered"]
[connection signal="pressed" from="GameOver/CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOver/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
